--- a/src/index.css
+++ b/src/index.css
@@ -136,3 +136,22 @@ input[type="date"].input-field::-webkit-calendar-picker-indicator:hover {
   color: #cfcfcf !important;
 }
 
+/* Thin scrollbar for nav and other elements */
+.scrollbar-thin {
+  scrollbar-width: thin;
+  scrollbar-color: #444 transparent;
+}
+.scrollbar-thin::-webkit-scrollbar {
+  height: 6px;
+}
+.scrollbar-thin::-webkit-scrollbar-track {
+  background: transparent;
+}
+.scrollbar-thin::-webkit-scrollbar-thumb {
+  background: #444;
+  border-radius: 3px;
+}
+.scrollbar-thin::-webkit-scrollbar-thumb:hover {
+  background: #666;
+}
+
